--- a/package.json
+++ b/package.json
@@ -52,8 +52,11 @@
             "@vitejs/plugin-react-swc": "^3.10.2",
             "vite": "6.3.5"
       },
-      "scripts": {
-            "dev": "vite",
-            "build": "vite build"
+   "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+}
+
       }
 }
